...
    },
    "addGame.button.add" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add"
          }
        }
      }
    },
    "addGame.button.close" : {
      "localizations" : {
...
    },
    "editGame.button.save" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
        }
      }
    },
    "editGame.title" : {
      "localizations" : {
...
    },
    "gameCard.action.delete" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
        }
      }
    },
    "gameCard.action.progress" : {
      "localizations" : {
...
    },
    "profile.title" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profile"
          }
        }
      }
    },
    "settings.about.attribution" : {
      "localizations" : {
...
    },
    "tab.settings" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        }
      }
    },
    "updateProgress.title" : {
      "localizations" : {
...
